# IronTrack

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  irontrack_claude_code_prompts.md  irontrack_phase4-5_prompts.md  irontrack_prompts_v4.md  irontrack_prompts_v5.md  irontrack_v0.2_prompts.md
.agents/: autopilot.md  docs_index.md  formula_reference.md  geodesy.md  geopackage.md  lidar.md  photogrammetry.md  roadmap.md  terrain.md  testing.md
.github/workflows/: ci.yml
docs/: 00_project_charter.md  01_legal_framework.md  02_geodesy_foundations.md  03_photogrammetry_spec.md  04_geoPackage_architecture.md  05_vertical_datum_engineering.md  06_rust_architecture_analysis.md  07_corridor_mapping.md  08_copernicusDEM.md  09_DSMvDTM_AGL_Flight_Generation.md  10_Rust_COG_Ingestion.md  11_aerial_survey_autopilot_formats.md  12_egm2008_grid_analysis.md  13_lidar_flight_planning.md  14_geotiff_cog_processing.md  15_3dep_access_integration.md  16_aerial_wind_data.md  17_uav_survey_analysis.md  18_oblique_photogrammetry.md  19_wgs84_epoch_management.md  20_na_airspace_data.md  21_dynamic_footprint_geometry.md  22_embedded_trigger_controller.md  23_nmea_data_requirements.md  24_survey_photogrammetry_ppk.md  25_aircraft_cockpit_design.md  26_tauri_integration.md  27_web_ui_plan.md  28_irontrack_daemon_design.md  29_avionics_serial_communication.md  30_geodetic_datum_transformation.md  31_nad83_epoch_management.md  32_geoid_interpolation_survey.md  33_3dep_data_integration.md  34_terrain_following_planning.md  35_airspace_obstacle_data.md  36_asprs_data_standards.md  37_aviation_safety_principles.md  38_uav_endurance_modeling.md  39_flight_path_optimization.md  (+19 more)
docs/design/: phantom_datum_types.md
docs/wiki/: README.md  daemon-and-api.md  early-adopters.md  flight-planning.md  geodesy-and-datums.md  maintainers.md  terrain-and-trajectory.md
src/: datum.rs  error.rs  legal.rs  lib.rs  main.rs  types.rs
src/ai/: client.rs  mod.rs  prompts.rs
src/dem/: cache.rs  copernicus.rs  mod.rs
src/geodesy/: geoid.rs  karney.rs  mod.rs  utm.rs
src/gpkg/: binary.rs  init.rs  mod.rs  rtree.rs
src/io/: dji.rs  geojson.rs  kml.rs  mod.rs  qgc.rs
src/kinematics/: atmosphere.rs  energy.rs  mod.rs
src/math/: dubins.rs  geometry.rs  mod.rs  numerics.rs  routing.rs
src/network/: errors.rs  mod.rs  nmea.rs  serial_manager.rs  server.rs  telemetry.rs
src/photogrammetry/: corridor.rs  flightlines.rs  lidar.rs  mod.rs  sensor.rs
src/trajectory/: bspline_smooth.rs  elastic_band.rs  mod.rs  pursuit.rs  validation.rs
tests/: daemon_integration.rs  datum.rs  dem.rs  geodesy.rs  gpkg.rs  io.rs  kinematics.rs  photogrammetry.rs  pipeline.rs  terrain_following_validation.rs  terrain_integration.rs  v02_integration.rs
