[package]
name = "irontrack"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Open-source flight management and aerial survey planning engine"

[features]
default = []
# Enable serial port support (requires libudev-dev on Linux).
# Used by the v0.4 daemon for NMEA/trigger controller communication.
serial = ["serialport", "tokio-serial"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egm96 = { version = "0.2", default-features = false }
egm2008 = "0.1"
geographiclib-rs = "0.2"
byteorder = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tiff = "0.9"
tempfile = "3"
thiserror = "1"
anyhow = "1"
log = "0.4"
quick-xml = { version = "0.36", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"
serialport = { version = "4", optional = true }
tokio-serial = { version = "5", optional = true }
mdns-sd = "0.13"
local-ip-address = "0.6"
nalgebra = "0.33"
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
subtle = "2"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }

[patch.crates-io]
egm96 = { path = "vendor/egm96" }

[dev-dependencies]
approx = "0.5"
flate2 = "1"
tokio-tungstenite = "0.24"
